--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "pandas>=2.3.3",
     "plotly>=6.3.1",
+    "pytest>=9.0.1",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "streamlit>=1.50.0",
